@@ -5,8 +5,6 @@ This file is generated! See scripts/docs_collector.py
 [[metricbeat-metricset-jolokia-jmx]]
 === Jolokia jmx metricset
 
-beta[]
-
 include::../../../module/jolokia/jmx/_meta/docs.asciidoc[]
 
 
