@@ -50,8 +50,8 @@ This file is generated! See scripts/docs_collector.py
 |<<metricbeat-module-http,HTTP>>     |    
 .2+|   |<<metricbeat-metricset-http-json,json>>   
 |<<metricbeat-metricset-http-server,server>> experimental[]  
-|<<metricbeat-module-jolokia,Jolokia>>  beta[]   |    
-.1+|   |<<metricbeat-metricset-jolokia-jmx,jmx>> beta[]  
+|<<metricbeat-module-jolokia,Jolokia>>     |    
+.1+|   |<<metricbeat-metricset-jolokia-jmx,jmx>>   
 |<<metricbeat-module-kafka,Kafka>>  beta[]   |    
 .2+|   |<<metricbeat-metricset-kafka-consumergroup,consumergroup>> beta[]  
 |<<metricbeat-metricset-kafka-partition,partition>> beta[]  
