@@ -1,1 +1,1 @@
-- release: beta
+- release: ga
